--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
 <body>
     <form>
         <div>Postion Properties</div>
-        <a href="http://127.0.0.1:5500/static.html" target="_blank">1.Static</a><br>
+        <!-- <a href="http://127.0.0.1:5500/static.html" target="_blank">1.Static</a><br>
         <a href="http://127.0.0.1:5500/Relative.html" target="_blank">2.Realtive</a><br>
         <a href="http://127.0.0.1:5500/Absolute.html" target="_blank">3.Absolute</a><br>
         <a href="http://127.0.0.1:5500/Fixed.html" target="_blank">4.Fixed</a><br>
-        <a href="http://127.0.0.1:5500/Sticky.html" target="_blank">5.Sticky</a><br>
+        <a href="http://127.0.0.1:5500/Sticky.html" target="_blank">5.Sticky</a><br> -->
+
+        <a href="./static.html" target="_blank">1.Static</a><br>
+        <a href="./Relative.html" target="_blank">2.Realtive</a><br>
+        <a href="./Absolute.html" target="_blank">3.Absolute</a><br>
+        <a href="./Fixed.html" target="_blank">4.Fixed</a><br>
+        <a href="./Sticky.html" target="_blank">5.Sticky</a><br>
     </form>
 </body>
 </html>
